feat: connect to original database

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,16 +17,17 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: ttatta
-  password: DavidinoSuRotaieT
-  host: localhost
+  database: <%= ENV.fetch("DATABASE") %>
+  username: <%= ENV.fetch("USERNAME") %>
+  password: <%= ENV.fetch("PASSWORD") %>
+  host: <%= ENV.fetch("HOST") %>
+  port: <%= ENV.fetch("PORT") %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: ttattagoapi
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
