--- a/config/database.yml
+++ b/config/database.yml
@@ -17,11 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: <%= ENV.fetch("DATABASE") %>
-  username: <%= ENV.fetch("USERNAME") %>
-  password: <%= ENV.fetch("PASSWORD") %>
-  host: <%= ENV.fetch("HOST") %>
-  port: <%= ENV.fetch("PORT") %>
+  database: <%= ENV["DATABASE" %>
+  username: <%= ENV["USERNAME"] %>
+  password: <%= ENV["PASSWORD"] %>
+  host: <%= ENV["HOST"]%>
+  port: <%= ENV["PORT"] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
