fix: typo in database config file

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: <%= ENV["DATABASE" %>
+  database: <%= ENV["DATABASE"] %>
   username: <%= ENV["USERNAME"] %>
   password: <%= ENV["PASSWORD"] %>
   host: <%= ENV["HOST"]%>
