--- a/config/database.yml
+++ b/config/database.yml
@@ -17,17 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: <%= ENV["DATABASE"] %>
-  username: <%= ENV["USERNAME"] %>
-  password: <%= ENV["PASSWORD"] %>
-  host: <%= ENV["HOST"]%>
-  port: <%= ENV["PORT"] %>
+  username: ttatta
+  password: DavidinoSuRotaieT
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  database: ttattagoapi
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -61,6 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: ttattagoapi_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,3 +83,6 @@ test:
 #
 production:
   <<: *default
+  database: ttattagoapi_production
+  username: ttattagoapi
+  password: <%= ENV["TTATTAGOAPI_DATABASE_PASSWORD"] %>
